Minor layout issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -330,25 +330,22 @@ body {
 			line-height: $buttonSize_phone;
 		}
 		vertical-align: middle;
-		*:last-child { float: right; }
+		
+		& > *:first-child	{ float: left; }
+		& > *:last-child	{ float: right; }
 		
 		overflow: hidden;
 		
 		.button {
 			@include box-sizing(border-box);
-			padding: 1vw;
-			padding-right: 0px;
+			padding-left: 1vw;
+			float: right;
 		}
 	}
 	
 	#correctPuzzles,
 	#incorrectPuzzles {
 		margin: 1.5vw 0px;
-	}
-	
-	#correctPuzzlesList,
-	#incorrectPuzzlesList {
-		margin-left: 0.5vw;
 	}
 	
 	.puzzleGap {
